# protspace

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-py310.txt  requirements-py311.txt  requirements-py312.txt  tsconfig.json
apps/prep/: Dockerfile  README.md  pyproject.toml
apps/prep/src/protspace_prep/: api.py  app.py  config.py  jobs.py  logger.py  pipeline.py  sse.py  validation.py
apps/prep/tests/: test_api.py  test_config.py  test_jobs.py  test_pipeline.py  test_ratelimit_api.py  test_sse.py  test_validation.py
apps/protspace/: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  requirements-py310.txt  requirements-py312.txt
apps/protspace/.github/: SEMANTIC_RELEASE_SETUP.md
apps/protspace/.github/workflows/: ci.yml  publish.yml  release.yml
apps/protspace/data/3FTx/: 3FTx_colored_hex.json  3FTx_customized.json  3FTx_raw_data.xlsx
apps/protspace/data/3FTx/parquetbundle/: 3FTx_accession.csv
apps/protspace/data/Pla2g2/: style.json
apps/protspace/data/Pla2g2/protspace_files/: Pla2g2_customized.json
apps/protspace/data/jmb_2025/: README.md
apps/protspace/data/jmb_2025/toxprot/: rebuild_mature_fasta.py  toxins_full.fasta  toxins_mature.fasta
apps/protspace/data/toxins/: toxins.parquetbundle
apps/protspace/data/toxins/processed_data/toxins_query_new_zstd/: projections_data.parquet  projections_metadata.parquet
apps/protspace/data/toxins/protspace/: projections_metadata.parquet  selected_annotations.parquet
apps/protspace/docs/: annotations.md  cli.md  styling.md
apps/protspace/docs/superpowers/plans/: 2026-04-30-toxprot-demo-regeneration.md  2026-06-11-eat-transfer-backend.md  2026-07-02-annotation-cluster-validity.md  2026-07-08-annotation-encoding-v2-backend.md  2026-07-08-annotation-encoding-v2-frontend.md  2026-07-13-colab-biocentral-independence.md
apps/protspace/docs/superpowers/research/: 2026-06-29-usearch-vs-bruteforce.md
apps/protspace/docs/superpowers/specs/: 2026-05-27-neighbors-subcommand-design.md  2026-06-11-eat-annotation-transfer-design.md  2026-07-02-annotation-cluster-validity-design.md  2026-07-04-eat-visualization-overlay-design.md  2026-07-08-annotation-encoding-redesign-design.md  2026-07-13-cli-help-and-docs-refresh-design.md
apps/protspace/examples/: image_creation.py  run_interactive_mode.py
apps/protspace/examples/cli/: protspace_local.py  protspace_query.py
apps/protspace/examples/notebook/: ClickThrough_GenerateEmbeddings.ipynb  Explore_ProtSpace.ipynb  PfamExplorer_ProtSpace.ipynb  Run_ProtSpace.ipynb
apps/protspace/notebooks/: ClickThrough_GenerateEmbeddings.ipynb  PfamExplorer_ProtSpace.ipynb  ProtSpace_Preparation.ipynb  ProtSpace_Transfer.ipynb  Run_ProtSpace.ipynb
apps/protspace/poster/: index.html
apps/protspace/scripts/: count_h5_rows.py  download_clan_fastas.py  generate_toxprot_demo.py  inspect_bundle.py
apps/protspace/scripts/generate_examples/: datasets.toml  generate.py
apps/protspace/scripts/pfam_clans/: README.md  merge_h5_batches.py
apps/protspace/src/protlabel/: __init__.py  backends.py  lookup.py  reliability.py  transfer.py
apps/protspace/src/protspace/: __init__.py  app.py  callbacks.py  config.py  data_processing.py  helpers.py  layout.py  layout_help.py  main.py  molstar_helper.py  plotting.py  styles.py  wsgi.py
apps/protspace/src/protspace/analysis/: __init__.py  classification.py
apps/protspace/src/protspace/assets/help_content/: help_faq.md  help_overview.md
apps/protspace/src/protspace/cli/: annotate.py  app.py  bundle.py  common_args.py  common_options.py  embed.py  local_data.py  prepare.py  project.py  serve.py  stats.py  style.py  transfer.py  uniprot_query.py
apps/protspace/src/protspace/core/: __init__.py  config.py  constants.py
apps/protspace/src/protspace/data/: __init__.py  base_data_processor.py  feature_manager.py  generate_csv.py  local_data_processor.py  taxonomy_feature_retriever.py  taxonomy_fetcher.py  uniprot_fetcher.py  uniprot_query_processor.py
apps/protspace/src/protspace/data/annotations/: __init__.py  configuration.py  encoding.py  manager.py  merging.py  scores.py
apps/protspace/src/protspace/data/embedding/: __init__.py  biocentral.py  local.py
apps/protspace/src/protspace/data/feature_retrievers/: interpro_feature_retriever.py  (+1 more)
apps/protspace/src/protspace/server/: __init__.py  app.py
apps/protspace/src/protspace/stats/: __init__.py  _sampling.py  annotation_select.py  base.py  carriage.py  driver.py
apps/protspace/src/protspace/ui/: __init__.py  callbacks.py  layout.py
apps/protspace/src/protspace/utils/: __init__.py  add_annotation_style.py  add_feature_style.py  analyse_json.py  arrow_reader.py  generate_csv.py  json_reader.py  prepare_json.py  reducers.py
apps/protspace/src/protspace/visualization/: __init__.py  molstar.py  plotting.py
apps/protspace/tests/: README.md  conftest.py  test_annotation_encoding.py  test_annotation_manager.py  test_annotation_select.py  test_annotation_validity.py  test_app.py  test_backend_switch.py  test_base_data_processor.py  test_biocentral_embedder.py  test_biocentral_retriever.py  test_bundle_overlay.py  test_bundle_settings.py  test_bundle_version.py  test_cath_names.py  test_classification.py  test_cli_no_frontend.py  test_config.py  test_display_decode.py  test_encoding_e2e.py  test_fasta.py  test_feature_manager.py  test_h5_parse_identifier.py  test_interpro_annotation_retriever.py  test_interpro_feature_retriever.py  test_local_data_processor.py  test_local_embedder.py  test_output_combinations.py  test_pfam_clan.py  test_pipeline_utils.py  test_predictions_overlay.py  test_prepare_json.py  test_protlabel_backends.py  test_protlabel_lookup.py  test_protlabel_reliability.py  test_protlabel_transfer.py  test_protlabel_version.py  test_reducers.py  test_scores_ted.py  test_settings_converter.py  (+16 more)
(+408 files in other folders)
