[project]
name = "protspace-prep"
version = "0.1.0"
description = "Hosted FASTA → .parquetbundle preparation service for ProtSpace — embeds, projects, and annotates sequences for interactive exploration at protspace.app"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  "anyio>=4.6",
  "protspace",
  "structlog>=24.1",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protspace_prep"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.uv]
package = true

[tool.uv.sources]
protspace = { workspace = true }
