[project]
name = "protspace"
version = "2.1.1"
description = "A visualisation tool for protein embeddings from pLMs"
authors = [{ name = "Tobias Senoner", email = "tobias.senoner@tum.de" }]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"

dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.6.1",
    "umap-learn>=0.5.7",
    "pacmap>=0.8.0",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "bioservices>=1.12.1",
    "tqdm>=4.67.1",
    "taxopy>=0.14.0",
    "pymmseqs>=1.0.4",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
frontend = [
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "dash>=3",
    "dash-bootstrap-components>=1.6.0",
    "dash-daq>=0.5.0",
    "dash-iconify>=0.1.2",
    "plotly>=5.24.1",
    "kaleido>=0.2.1,!=0.2.1.post1",
    "dash-molstar>=1.3.0",
    "requests>=2.32.4",
]

[tool.uv]
dev-dependencies = [
    "dash[testing]>=3",
    "webdriver-manager>=4.0.1",
    "biopython>=1.84",
    "cairosvg>=2.7.1",
    "dash-mantine-components>=0.14.5",
    "dash-treeview-antd>=0.0.1",
    "holoviews>=1.19.1",
    "hvplot>=0.11.0",
    "ijson>=3.3.0",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "jupyter-bokeh>=4.0.5",
    "panel>=1.5.2",
    "pyarrow>=17.0.0",
    "ruff>=0.6.9",
    "xarray>=2024.9.0",
    "torch==2.2",
    "seaborn>=0.13.2",
    "pytest>=8.3.3",
    "polars>=1.26.0",
    "taxopy>=0.14.0",
    "jupytext>=1.17.1",
]

[project.scripts]
protspace = "protspace.main:run"
protspace-local = "protspace.cli.local_data:main"
protspace-query = "protspace.cli.uniprot_query:main"
protspace-feature-colors = "protspace.utils.add_feature_style:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:parmed.*:",
    "ignore::DeprecationWarning:selenium.*:",
    "ignore::DeprecationWarning:kaleido.*:",
]

[tool.semantic_release]
assets = [
    "uv.lock",
    "requirements-py310.txt",
    "requirements-py311.txt",
    "requirements-py312.txt",
]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/protspace/__init__.py:__version__"]
build_command = "bash update_deps.sh"
